--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@types/jest": "^29.5.3",
     "parcel-bundler": "^1.6.1"
   },
   "devDependencies": {
